# duff-net-dynamics

./: LICENSE  README.md  pyproject.toml
notebooks/: math_analysis.ipynb  nn_modeling.ipynb  nn_modeling_multi_step.ipynb  nn_modeling_recursive.ipynb  simulation.ipynb
paper/: term_paper.tex
src/: simulate.py
